# mussia18

./: Cargo.toml  Dockerfile  Taskfile.yaml  Tiltfile  Trunk.toml  index.html  justfile  rust.Dockerfile
.github/workflows/: rust.yml
k8s/: testing.yaml
k8s/overlays/dev/: kustomization.yaml
libs/mongo/: Cargo.toml
libs/mongo/src/: repository.rs
platform/cluster/: Taskfile.yaml
platform/compose/: Taskfile.yaml  compose.yaml
platform/crossplane-package/: crossplane.yaml
platform/crossplane/storage/: composition-gcp.cue  definition.cue
platform/metallb/: Taskfile.yaml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cluster.rs  helm.rs  main.rs
turbo/: bun.lockb  package.json
