[package]
name = "mussia18-ui"
version = "0.0.0"
edition = "2021"

#[lib]
#[badges]

[workspace]
members = [
    "src-tauri",
    "apps/clapper",
    "apps/first_operator",
    "apps/second_operator",
    "apps/actix_demo",
    "apps/api"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.4", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
